--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                     url: "https://jolly-voice-31926.pktriot.net/scans_tracker/index.php",
                     method: "post",
                     data: {
-                        data_request:1  
+                        data_request:1,
+                        csi:"CSI000001"
                     },
                     success: function (response) {
                         
